# openmugen

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  cmake_install.cmake  index.data  index.html  index.js  index.wasm  run-Darwin.command  run-Linux.sh  run-Windows.ps1
.github/workflows/: cd.yml  ci.yml  wasm.yml  web.yml
data/: common1.cns  common1_back.cns
data/kfm/: kfm.cmd  kfm.cmd1
release/Darwin/: launcher.command
release/Linux/: launcher.sh
release/Windows/: laucher.ps1
src/: AirManager.cpp  AirManager.h  CmdManager.cpp  CmdManager.h  ControllerExecuter.cpp  ControllerExecuter.h  Input.cpp  Input.h  MemManager.cpp  MemManager.h  SDLManager.cpp  SDLManager.h  SDL_framerate.cpp  SDL_framerate.h  SffManager.cpp  SffManager.h  Stack.cpp  Stack.h  StateManager.cpp  StateManager.h  StateParser.cpp  StateParser.h  Timer.h  VM.cpp  VM.h  VideoSystem.cpp  VideoSystem.h  define.h  engine.cpp  engine.h  game.cpp  game.h  global.cpp  global.h  main.cpp  player.cpp  player.h  scale2x.cpp  scale2x.h  scale2xSDL.cpp  (+3 more)
